# wgpu-winit-android-example

./: .gitignore  Cargo.toml  LICENSE.MIT.md  README.md  build.gradle.kts  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/wgpuapplication/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/wgpuapplication/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/wgpuapplication/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lib/: Cargo.toml
lib/src/: app.rs  lib.rs
src/: app.rs  lib.rs
v0.13/: Cargo.toml
v0.13/src/: lib.rs
v0.9/src/: lib.rs
